--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "en-dictionary",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "git@github.com:open-language/en-dictionary.git",
-    "author": "Sudhanshu Raheja <sudhanshu@leftshift.io>",
-    "license": "MIT",
-    "keywords": [
-      "dictionary",
-      "wordnet",
-      "natural-language-processing",
-      "english-language",
-      "language",
-      "nlp"
-    ],
-    "devDependencies": {
-      "babel-eslint": "^10.0.1",
-      "eslint": "^5.16.0",
-      "eslint-config-airbnb-base": "^13.1.0",
-      "eslint-config-prettier": "^4.3.0",
-      "eslint-plugin-import": "^2.17.3",
-      "eslint-plugin-jest": "^22.6.4",
-      "jest": "^24.8.0",
-      "prettier": "^1.17.1"
-    },
-    "scripts": {
-      "start": "node index.js",
-      "test": "jest --detectOpenHandles"
-    }
+  "name": "en-dictionary",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:open-language/en-dictionary.git",
+  "author": "Sudhanshu Raheja <sudhanshu@leftshift.io>",
+  "license": "MIT",
+  "keywords": [
+    "dictionary",
+    "wordnet",
+    "natural-language-processing",
+    "english-language",
+    "language",
+    "nlp"
+  ],
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.6.4",
+    "jest": "^24.8.0",
+    "prettier": "^1.17.1"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest --detectOpenHandles"
+  },
+  "dependencies": {
+    "en-wordnet": "^2.0.2"
   }
+}
