[sudhanshu] moves database to a class, adds mock wornet to test reader, disconnects reader from everything except database

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "jest --detectOpenHandles"
   },
   "dependencies": {
-    "en-wordnet": "^2.0.2"
+    "en-wordnet": "^2.0.2",
+    "reiterator": "^1.0.0"
   }
 }
