--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
-    "env": {
-      "node": true
-    },
-    "extends": ["airbnb-base", "plugin:jest/recommended", "prettier"],
-    "parser": "babel-eslint",
-    "rules": {},
-    "plugins": ["jest"]
-  }
+  "env": {
+    "node": true
+  },
+  "extends": ["airbnb-base", "plugin:jest/recommended", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "rules": {},
+  "plugins": ["jest"]
+}
