--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "en-dictionary",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "main": "dist/index.js",
-  "types": "dist/index.d.js",
+  "types": "dist/index.d.ts",
   "repository": "git@github.com:open-language/en-dictionary.git",
   "author": "Sudhanshu Raheja <sudhanshu@leftshift.io>",
   "license": "MIT",
@@ -39,5 +39,6 @@
   "dependencies": {
     "en-wordnet": "^2.0.5",
     "reiterator": "^1.0.0"
-  }
+  },
+  "files": ["dist/**/*"]
 }
