--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "en-dictionary",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "git@github.com:open-language/en-dictionary.git",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/open-language/en-dictionary.git"
+  },
   "author": "Sudhanshu Raheja <sudhanshu@leftshift.io>",
   "license": "MIT",
   "keywords": [
@@ -15,31 +19,14 @@
     "nlp"
   ],
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
-    "jest": "^24.8.0",
-    "prettier": "^1.17.1",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.7",
-    "@typescript-eslint/parser": "^1.9.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1"
+    "bun-types": "^1.1.3",
+    "prettier": "^1.17.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "tsc && jest --detectOpenHandles",
-    "build": "tsc"
+    "start": "node src/index.ts"
   },
   "dependencies": {
     "en-wordnet": "^2.0.5",
     "reiterator": "^1.0.0"
-  },
-  "files": [
-    "dist/**/*"
-  ]
+  }
 }
